# pytest_sample

./: .coverage  .env  .gitignore  conftest.py  pyproject.toml
src/: run.py
tests/: test_run.py
